--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
@@ -8,37 +8,37 @@
     android:gravity="center">
 
     <TextView
-        android:id="@+id/count_text_view"
-        android:layout_width="293dp"
-        android:layout_height="254dp"
-        android:background="@color/yellow"
-        android:textAlignment="center"
-        android:textColor="@color/purple_700"
-        android:textSize="200sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/count_button"
+        android:id="@+id/article_heading"
+        android:text = "@string/heading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        android:padding="10dp"
+        android:textAppearance="@android:style/TextAppearance.Large"
+        android:textStyle="bold">
+    </TextView>
+    <TextView
+        android:id="@+id/article_subheading"
+        android:text="@string/subheading"
+        android:layout_below="@id/article_heading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textAppearance="@android:style/TextAppearance">
+    </TextView>
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="164dp"
-        android:text="@string/count_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toast_button" />
-
-    <Button
-        android:id="@+id/toast_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/toast_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_below="@id/article_subheading">
+            <TextView
+                android:id="@+id/article"
+                android:lineSpacingExtra="5sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/article_text"
+                android:autoLink="web" >
+            </TextView>
+    </ScrollView>
+</RelativeLayout>
 
