--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,19 +18,22 @@
         android:textAppearance="@android:style/TextAppearance.Large"
         android:textStyle="bold">
     </TextView>
-    <TextView
-        android:id="@+id/article_subheading"
-        android:text="@string/subheading"
-        android:layout_below="@id/article_heading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:textAppearance="@android:style/TextAppearance">
-    </TextView>
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/article_subheading">
+        android:layout_below="@id/article_heading">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/article_subheading"
+                android:text="@string/subheading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textAppearance="@android:style/TextAppearance">
+            </TextView>
             <TextView
                 android:id="@+id/article"
                 android:lineSpacingExtra="5sp"
@@ -39,6 +42,7 @@
                 android:text="@string/article_text"
                 android:autoLink="web" >
             </TextView>
+        </LinearLayout>
     </ScrollView>
 </RelativeLayout>
 
