--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,61 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/article_heading"
-        android:text = "@string/heading"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
-        android:padding="10dp"
-        android:textAppearance="@android:style/TextAppearance.Large"
-        android:textStyle="bold">
-    </TextView>
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/article_heading">
-        <LinearLayout
-            android:id="@+id/article_linearlayout"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/article_subheading"
-                android:text="@string/subheading"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:textAppearance="@android:style/TextAppearance">
-            </TextView>
-            <TextView
-                android:id="@+id/article"
-                android:lineSpacingExtra="5sp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/article_text"
-                android:autoLink="web" >
-            </TextView>
-            <EditText
-                android:autofillHints="Escribe comentario aquí..."
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/comment_editText">
-            </EditText>
-            <Button
-                android:id="@+id/add_comment"
-                android:text="@string/comment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </Button>
-        </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+            android:layout_height="500dp"
+            android:id="@+id/container"
+            android:textSize="20sp"
+            android:layout_gravity="center"
+            android:text="This is a CameraX test app!"
+            android:gravity="center">
+        </TextView>
 
+        <Button
+            android:id="@+id/enableCamera"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="Open Camera" />
+    </LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
