--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,84 +3,91 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/black">
-<TextView
-android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/TextViewTopTitle"
-    android:text="@string/app_logo_top"
-    android:textColor="@color/logo_color"
-    android:layout_gravity="center_vertical|center_horizontal"
-    android:gravity="top|center"
-    android:textSize="@dimen/logo_size"></TextView>
-<TableLayout
-android:id="@+id/TableLayout01"
-    android:stretchColumns="*"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent">
-<TableRow
-android:id="@+id/TableRow01"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:layout_gravity="center_vertical|center_horizontal">
-<ImageView
-android:id="@+id/ImageView2_Left"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical|center_horizontal"
+    android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-    android:src="@drawable/splash1"></ImageView>
-<ImageView
-android:id="@+id/ImageView2_Right"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:adjustViewBounds="true"
-    android:scaleType="fitCenter"
-    android:layout_gravity="center_vertical|center_horizontal"
-    android:src="@drawable/splash2"></ImageView>
-    </TableRow>
-<TableRow
-android:id="@+id/TableRow02"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:scaleType="fitXY"
-    android:layout_gravity="center_vertical|center_horizontal">
-<ImageView
-android:id="@+id/ImageView3_Left"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:adjustViewBounds="true"
-    android:scaleType="fitCenter"
-    android:layout_gravity="center_vertical|center_horizontal"
-    android:src="@drawable/splash3"></ImageView>
-<ImageView
-android:id="@+id/ImageView3_Right"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:adjustViewBounds="true"
-    android:scaleType="fitCenter"
-    android:layout_gravity="center_vertical|center_horizontal"
-    android:src="@drawable/splash4"></ImageView>
-</TableRow>
-</TableLayout>
-<TextView
-android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/TextViewBottomTitle"
-    android:text="@string/app_logo_bottom"
-    android:textColor="@color/logo_color"
-    android:gravity="center"
-    android:textSize="@dimen/logo_size"></TextView>
-<TextView
-    android:id="@+id/TextViewBottomVersion"
-    android:text="@string/app_version_info"
-    android:textSize="@dimen/version_size"
-    android:textColor="@color/version_color"
-    android:background="@color/version_bkgrd"
-    android:layout_height="match_parent"
-    android:lineSpacingExtra="@dimen/version_spacing"
-    android:layout_width="match_parent"
-    android:layout_gravity="center_vertical|center_horizontal"
-    android:gravity="center"></TextView>
-    </LinearLayout>
+        <TextView
+            android:id="@+id/teamName1"
+            android:text="Team 1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="120dp"
+            android:layout_centerHorizontal="true"
+            style="@style/TeamText" />
+        <ImageButton
+            android:id="@+id/minus1"
+            style="@style/MinusButtons"
+            android:onClick="onClick"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_toLeftOf="@id/score1"
+            android:layout_below="@id/teamName1"/>
+        <TextView
+            android:id="@+id/score1"
+            style="@style/ScoreText"
+            android:layout_below="@id/teamName1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"/>
+        <ImageButton
+            android:id="@+id/plus1"
+            style="@style/PlusButtons"
+            android:onClick="onClick"
+            android:layout_toRightOf="@id/score1"
+            android:layout_below="@id/teamName1"
+            android:layout_width="70dp"
+            android:layout_height="70dp"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/teamName2"
+            android:text="Team 2"
+            style="@style/TeamText"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="120dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <ImageButton
+            android:id="@+id/minus2"
+            style="@style/MinusButtons"
+            android:layout_toLeftOf="@id/score2"
+            android:layout_below="@id/teamName2"
+            android:layout_width="70dp"
+            android:onClick="onClick"
+            android:layout_height="70dp"/>
+        <TextView
+            android:id="@+id/score2"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/teamName2"
+            style="@style/ScoreText"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"/>
+        <ImageButton
+            android:id="@+id/plus2"
+            style="@style/PlusButtons"
+            android:onClick="onClick"
+            android:layout_toRightOf="@id/score2"
+            android:layout_below="@id/teamName2"
+            android:layout_width="70dp"
+            android:layout_height="70dp"/>
+
+    </RelativeLayout>
+
+</LinearLayout>
