--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,25 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="ScoreButtons" parent="Widget.AppCompat.Button">
-        <item name="android:background">@drawable/button_bg</item>
-        <item name="android:color">@color/colorPrimary</item>
-    </style>
-
-    <style name="PlusButtons" parent="ScoreButtons">
-        <item name="android:src">@drawable/ic_plus</item>
-        <item name="android:contentDescription">@string/plus_button</item>
-    </style>
-
-    <style name="MinusButtons" parent="ScoreButtons">
-        <item name="android:src">@drawable/ic_minus</item>
-        <item name="android:contentDescription">@string/minus_button</item>
-    </style>
-
-    <style name="ScoreText">
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display3</item>
-    </style>
-    
-    <style name="TeamText">
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display1</item>
+    <style name="word_title">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">50dp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 </resources>
